--- a/easy image uploader pro/en.lproj/MainStoryboard.storyboard
+++ b/easy image uploader pro/en.lproj/MainStoryboard.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2843" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="4">
     <dependencies>
         <deployment version="1280" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1929"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
     <scenes>
         <!--Eiopro First View Controller - First-->
@@ -10,31 +10,23 @@
             <objects>
                 <viewController title="First" id="2" customClass="eiopro_FirstViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="16">
-                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="bnd-En-x8P">
-                                <rect key="frame" x="0.0" y="44" width="320" height="367"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="367"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
-                            <navigationBar contentMode="scaleToFill" barStyle="blackOpaque" id="zEX-lK-dxo">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="Upload image" id="cDJ-1A-cLO">
-                                        <barButtonItem key="leftBarButtonItem" title="Upload" style="done" id="obR-sb-PLx"/>
-                                        <barButtonItem key="rightBarButtonItem" title="Settings" style="done" id="WuC-CJ-hDP"/>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Upload image" image="photos_polaroid.png" id="7"/>
+                    <navigationItem key="navigationItem" title="Upload image" id="eMZ-ix-AYj">
+                        <barButtonItem key="leftBarButtonItem" title="Upload" style="done" id="obR-sb-PLx"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="10" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="695" y="16"/>
+            <point key="canvasLocation" x="1487" y="149"/>
         </scene>
         <!--Navigation Controller - My images-->
         <scene sceneID="d10-wp-yoh">
@@ -53,14 +45,14 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Blt-kF-Nuv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="608" y="959"/>
+            <point key="canvasLocation" x="698" y="969"/>
         </scene>
         <!--Login Class - Manage my images-->
         <scene sceneID="vPQ-zj-y32">
             <objects>
                 <tableViewController id="Su4-Rl-khF" customClass="UILoginClass" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="UuW-ax-DBN">
-                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <sections>
@@ -253,7 +245,6 @@
                                                     <connections>
                                                         <action selector="CreateAccountHandle:" destination="Su4-Rl-khF" eventType="touchUpInside" id="28j-Ph-AJm"/>
                                                         <action selector="textFieldReturn:" destination="Su4-Rl-khF" eventType="touchDown" id="KIJ-ID-qAg"/>
-                                                        <segue destination="qw1-Zu-PNl" kind="push" identifier="pushToImageViewer" id="Pfs-le-av2"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
@@ -272,18 +263,19 @@
                         <outlet property="RegisterEmail" destination="Xh2-YV-rXx" id="eMP-UC-Mks"/>
                         <outlet property="RegisterPass" destination="mOo-9G-XAu" id="34D-Gk-wRe"/>
                         <outlet property="RegisterUser" destination="mZ9-kz-5wp" id="2Xf-jL-dkC"/>
+                        <segue destination="GYB-eS-bBs" kind="push" identifier="pushToImageViewer" id="41B-Wi-vyj"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6qb-2z-6ie" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1066" y="948"/>
+            <point key="canvasLocation" x="1274" y="898"/>
         </scene>
-        <!--Image View - My account-->
+        <!--Table View Controller - My account-->
         <scene sceneID="Xfp-aM-LCn">
             <objects>
-                <tableViewController id="qw1-Zu-PNl" customClass="ImageView" sceneMemberID="viewController">
+                <tableViewController id="qw1-Zu-PNl" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="feJ-nJ-F7T">
-                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <sections>
@@ -428,11 +420,11 @@
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="password" id="vlT-Oi-FZa">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="password" id="vlT-Oi-FZa">
                                         <rect key="frame" x="0.0" y="315" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="10" y="0.0" width="300" height="43"/>
+                                            <rect key="frame" x="10" y="0.0" width="280" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="FTP password" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" enabled="NO" adjustsFontSizeToFit="NO" id="Y66-57-YUa">
@@ -491,13 +483,60 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="My account" id="0Ka-1n-mms">
-                        <barButtonItem key="leftBarButtonItem" enabled="NO" title="My images" style="done" id="qkc-pF-hCH"/>
+                        <barButtonItem key="leftBarButtonItem" title="Images" style="done" id="eLG-iD-PzE">
+                            <connections>
+                                <segue destination="GYB-eS-bBs" kind="push" id="0jH-rV-xNh"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Logout" style="done" id="ojg-Ai-omm"/>
                     </navigationItem>
+                    <connections>
+                        <segue destination="Su4-Rl-khF" kind="push" identifier="Pushtologin" id="Ln6-VQ-sFf"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2FZ-5U-LgG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1609" y="388"/>
+            <point key="canvasLocation" x="1981" y="149"/>
+        </scene>
+        <!--Image View - My images-->
+        <scene sceneID="gow-nX-jKz">
+            <objects>
+                <tableViewController id="GYB-eS-bBs" customClass="ImageView" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="black" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="S1m-5b-9sk">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="Cell" id="1ro-Xz-jeI">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                        <sections/>
+                        <connections>
+                            <outlet property="dataSource" destination="GYB-eS-bBs" id="DqR-3g-7iq"/>
+                            <outlet property="delegate" destination="GYB-eS-bBs" id="e9c-2s-9JD"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="My images" id="Gp8-aK-VQx">
+                        <barButtonItem key="leftBarButtonItem" title="Settings" style="done" id="cAv-Tq-VzC">
+                            <connections>
+                                <segue destination="qw1-Zu-PNl" kind="push" id="w7j-sx-Ni8"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="Su4-Rl-khF" kind="push" identifier="Pushtologin" id="IeL-G9-V6A"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mUR-fJ-Jhp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1981" y="886"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="15">
@@ -513,46 +552,46 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="2" kind="relationship" relationship="viewControllers" id="26"/>
+                        <segue destination="ErW-1U-K0D" kind="relationship" relationship="viewControllers" id="26"/>
                         <segue destination="8I2-Pu-l9F" kind="relationship" relationship="viewControllers" id="JYP-xM-mZf"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="14" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="66" y="364"/>
+            <point key="canvasLocation" x="170" y="382"/>
+        </scene>
+        <!--Navigation Controller - Upload image-->
+        <scene sceneID="gcF-aa-Zh0">
+            <objects>
+                <navigationController id="ErW-1U-K0D" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Upload image" image="photos_polaroid.png" id="7"/>
+                    <toolbarItems/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="blackOpaque" prompted="NO"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="blackOpaque" id="nMB-ci-bZs">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="2" kind="relationship" relationship="rootViewController" id="4sE-wA-t09"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Blk-ML-Fd3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="847" y="149"/>
         </scene>
     </scenes>
     <resources>
         <image name="cog_02.png" width="26" height="26"/>
         <image name="photos_polaroid.png" width="26" height="26"/>
     </resources>
-    <classes>
-        <class className="ImageView" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ImageView.h"/>
-        </class>
-        <class className="UILoginClass" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UILoginClass.h"/>
-            <relationships>
-                <relationship kind="action" name="CreateAccountHandle:"/>
-                <relationship kind="action" name="LoginAccountHandle:"/>
-                <relationship kind="action" name="backgroundTouched:"/>
-                <relationship kind="action" name="textFieldReturn:"/>
-                <relationship kind="outlet" name="LoginButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="LoginPass" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="LoginUser" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="RegisterButton" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="RegisterEmail" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="RegisterPass" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="RegisterUser" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-        <class className="eiopro_FirstViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/eiopro_FirstViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="0jH-rV-xNh"/>
+        <segue reference="Ln6-VQ-sFf"/>
+    </inferredMetricsTieBreakers>
 </document>
